--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -19,10 +19,14 @@
     <body>
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <button class="navbar-toggle" type ="button" data-toggle ="collapse" data-target="#navbar">
+            <button 
+              class="navbar-toggler" 
+              type ="button"
+              data-toggle ="collapse" 
+              data-target="#navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collpase" id="navbar">
+            <div class="collapse navbar-collapse" id="navbar">
                 <div class="navbar-nav">
                     <a class="nav-item nav-link" id="login" href="/login">Login</a>
                     <a class="nav-item nav-link" id="login" href="sing-up">Sing up</a>
