--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,1 +1,2 @@
-{% extends "base.html" %} {% block title %}Change{% endblock %}
+{% extends "base.html" %} {% block title %}Home{% endblock %}
+{% block content %}<h1>This is Home</h1>{% endblock %}
