--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -17,26 +17,25 @@
     <title>{% block title %}Home{% endblock %}</title>
 </head>
     <body>
-
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <button 
               class="navbar-toggler" 
               type ="button"
               data-toggle ="collapse" 
               data-target="#navbar">
-                <span class="navbar-toggler-icon"></span>
+              <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbar">
                 <div class="navbar-nav">
                     <a class="nav-item nav-link" id="login" href="/login">Login</a>
-                    <a class="nav-item nav-link" id="login" href="sing-up">Sing up</a>
-                    <a class="nav-item nav-link" id="login" href="/logout">Logout</a>
-                    <a class="nav-item nav-link" id="login" href="/">Home</a>
+                    <a class="nav-item nav-link" id="singUP" href="sing-up">Sing up</a>
+                    <a class="nav-item nav-link" id="Logout" href="/logout">Logout</a>
+                    <a class="nav-item nav-link" id="home" href="/">Home</a>
                 </div>
             </div>
         </nav>
 
-
+        <div class ="container"></div>{% block content %}{% endblock %}</div>
         <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
