--- a/website/templates/sing_up.html
+++ b/website/templates/sing_up.html
@@ -1,50 +1,48 @@
-{% extends "base.html" %} {% block title %}sing_Up{% endblock %}
-{% block content %}
-<form method="POST">
-    <h3 aling="center">sing up</h3>
-    <div class="from-group">
-        <label for="email">Email address
-        </label>
-     <input 
-        type="email"
-        class="from-control"
-        id="email"
-        name="email" 
-        placeholder="Enter email"
+{% extends "base.html" %} {% block title %}Sign Up{% endblock %} {% block
+    content %}
+    <form method="POST">
+      <h3 align="center">Sign Up</h3>
+      <div class="form-group">
+        <label for="email">Email Address</label>
+        <input
+          type="email"
+          class="form-control"
+          id="email"
+          name="email"
+          placeholder="Enter email"
         />
-    </div>
-    <div class="from-group">
+      </div>
+      <div class="form-group">
         <label for="firstName">First Name</label>
-    <input 
-        type="first_name"
-        class="from-control"
-        id="FirstName"
-        name="FirstName" 
-        placeholder="Enter FirstName"
-        >
-    </div>
-    <div class="from-group">
+        <input
+          type="text"
+          class="form-control"
+          id="firstName"
+          name="firstName"
+          placeholder="Enter first name"
+        />
+      </div>
+      <div class="form-group">
         <label for="password1">Password</label>
-     <input 
-        type="password"
-        class="from-control"
-        id="password1"
-        name="password1" 
-        placeholder="Enter password"
-        >
-    </div>
-    <div class="from-group">
-        <label for="password2">Password(confirm)</label>
-     <input 
-        type="password"
-        class="from-control"
-        id="password2"
-        name="password2" 
-        placeholder="Confirm password"
-        >
-    </div>
-    <br />
-    <button type="submit"
-    class="btn btn-primary">submit</button>
-</form>
-{% endblock %}
+        <input
+          type="password"
+          class="form-control"
+          id="password1"
+          name="password1"
+          placeholder="Enter password"
+        />
+      </div>
+      <div class="form-group">
+        <label for="password2">Password (Confirm)</label>
+        <input
+          type="password"
+          class="form-control"
+          id="password2"
+          name="password2"
+          placeholder="Confirm password"
+        />
+      </div>
+      <br />
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+    {% endblock %}
