--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -28,13 +28,33 @@
             <div class="collapse navbar-collapse" id="navbar">
                 <div class="navbar-nav">
                     <a class="nav-item nav-link" id="login" href="/login">Login</a>
-                    <a class="nav-item nav-link" id="singUP" href="sing-up">Sing up</a>
+                    <a class="nav-item nav-link" id="signUP" href="sign-up">sign up</a>
                     <a class="nav-item nav-link" id="Logout" href="/logout">Logout</a>
                     <a class="nav-item nav-link" id="home" href="/">Home</a>
                 </div>
             </div>
         </nav>
-
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+          {% for category, message in messages %}
+          {% if category == "error" %}
+          <div class ="alert alert-danger alter-dismissable fade show" role="alert">
+            {{ message }}
+            <button type ="button" class="close" data-dismiss="alert">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          {% else %}
+          <div class ="alert alert-success alter-dismissable fade show" role="alert">
+            {{ message }}
+            <button type ="button" class="close" data-dismiss="alert">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          {% endif %}
+          {% endfor %}
+        {% endif %}
+          {% endwith %}
         <div class ="container"></div>{% block content %}{% endblock %}</div>
         <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
