--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -1,22 +1,22 @@
 {% extends "base.html" %} {% block title %}Login{% endblock %} {% block content
 %}
 <form method="POST">
-  <h3 aling="center">Login</h3>
-  <div class="from-group">
+  <h3 align="center">Login</h3>
+  <div class="form-group">
     <label for="email">Email address</label>
     <input 
         type="email"
-        class="from-control"
+        class="form-control"
         id="email"
         name="email" 
         placeholder="Enter email"
       />
     </div>
-    <div class="from-group">
-      <label for="password1">Password</label>
+    <div class="form-group">
+      <label for="password">Password</label>
       <input
         type="password"
-        class="from-control"
+        class="form-control"
         id="password"
         name="password" 
         placeholder="Enter password"
