--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -19,7 +19,7 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <button 
-              class="navbar-toggler" 
+              class="navbar-togger" 
               type ="button"
               data-toggle ="collapse" 
               data-target="#navbar">
